handle enum status order
